@@ -1,5 +1,9 @@
 2011-02-19  Robert Larice
  * src/frontend/numparam/xpressn.c :
+    numparm, shrink scope for dstrings, mostly message() related
+
+2011-02-19  Robert Larice
+ * src/frontend/numparam/xpressn.c :
     numparm, cleanup parseunit() and fetchnumber()
 
 2011-02-15  Holger Vogt
